[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/helpers/GradientToImage.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/ErrorDialog.tscn" type="PackedScene" id=2]

[node name="GradientToImage" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
window_title = "Gradient To Image"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 571.0

[node name="FileLine" type="HBoxContainer" parent="MarginContainer/List"]
margin_right = 1014.0
margin_bottom = 24.0
__meta__ = {
"_edit_lock_": true
}

[node name="FileLabel" type="Label" parent="MarginContainer/List/FileLine"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 19.0
text = "File:"

[node name="InputFile" type="LineEdit" parent="MarginContainer/List/FileLine"]
margin_left = 31.0
margin_right = 939.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="BrowseFile" type="Button" parent="MarginContainer/List/FileLine"]
margin_left = 943.0
margin_right = 1014.0
margin_bottom = 24.0
text = "Browse..."

[node name="FileLine2" type="HBoxContainer" parent="MarginContainer/List"]
margin_top = 28.0
margin_right = 1014.0
margin_bottom = 52.0
__meta__ = {
"_edit_lock_": true
}

[node name="FileLabel" type="Label" parent="MarginContainer/List/FileLine2"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 19.0
text = "File:"

[node name="OutputFile" type="LineEdit" parent="MarginContainer/List/FileLine2"]
margin_left = 31.0
margin_right = 1014.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="BrowseFile2" type="Button" parent="MarginContainer/List/FileLine2"]
visible = false
margin_left = 929.0
margin_right = 1000.0
margin_bottom = 24.0
text = "Browse..."

[node name="Options" type="GridContainer" parent="MarginContainer/List"]
margin_top = 56.0
margin_right = 1014.0
margin_bottom = 80.0
columns = 2

[node name="Label" type="Label" parent="MarginContainer/List/Options"]
margin_top = 5.0
margin_right = 86.0
margin_bottom = 19.0
text = "Image Height"

[node name="ImageHeight" type="SpinBox" parent="MarginContainer/List/Options"]
margin_left = 90.0
margin_right = 164.0
margin_bottom = 24.0
min_value = 2.0
max_value = 5000.0
value = 2.0
suffix = "px"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/List"]
margin_top = 546.0
margin_right = 1014.0
margin_bottom = 566.0
size_flags_vertical = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Cancel" type="Button" parent="MarginContainer/List/Buttons"]
margin_right = 505.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Convert" type="Button" parent="MarginContainer/List/Buttons"]
margin_left = 509.0
margin_right = 1014.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Convert"

[node name="GetResourceFile" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.res ; GradientTexture Resources", "*.tres ; GradientTexture Resources" )
current_dir = "res://assets/textures"
current_path = "res://assets/textures/"

[node name="ErrorDialog" parent="." instance=ExtResource( 2 )]

[connection signal="popup_hide" from="." to="." method="_on_GradientToImage_popup_hide"]
[connection signal="pressed" from="MarginContainer/List/FileLine/BrowseFile" to="." method="_on_BrowseFile_pressed"]
[connection signal="pressed" from="MarginContainer/List/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="MarginContainer/List/Buttons/Convert" to="." method="_on_Convert_pressed"]
[connection signal="file_selected" from="GetResourceFile" to="." method="_on_GetResourceFile_file_selected"]
